--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
