--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,9 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:27.1.1'
-
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
 
 }
 
